# defense_claw_modified_for_openclaw

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  deploy-ec2.md  docker-compose.yml  docker-entrypoint.sh  docker-openclaw-pairing.md  go.mod  go.sum  pyproject.toml
.devin/: wiki.json
.github/: CODEOWNERS  dependabot.yml  secret_scanning.yml
.github/workflows/: ci.yml  e2e.yml  release.yaml
bundles/local_observability_stack/: README.md  docker-compose.yml  run.sh
cli/defenseclaw/: __init__.py  audit_actions.py  bootstrap.py  codeguard_skill.py  config.py  context.py  credentials.py  db.py  gateway.py  gateway_error_codes.py  guardrail.py  llm.py  logger.py  main.py  migrations.py  models.py  paths.py  provenance.py  registry.py
cli/tests/: __init__.py  helpers.py  test_admission.py  test_bootstrap.py  test_claw_inventory.py  test_cli_smoke.py  test_cmd_config.py  test_cmd_doctor.py  test_cmd_init.py  test_cmd_keys.py  test_cmd_mcp.py  test_cmd_misc.py  test_cmd_plugin.py  test_cmd_policy.py  test_cmd_setup_provider.py  test_cmd_setup_sandbox.py  test_cmd_skill.py  test_cmd_uninstall.py  test_cmd_upgrade.py  test_cmd_version.py  test_commands.py  test_config.py  test_credentials.py  test_enforcer.py  test_gateway.py  test_guardrail.py  test_judge.py  test_llm_bridge.py  test_llm_client_subprocess.py  test_llm_env.py  test_logger_v7.py  test_meta_analyzer.py  test_models_db.py  test_observability.py  test_plugin_enforcer.py  test_plugin_scanner_file_collection.py  test_policy_scan_integration.py  test_registry.py  test_scanners.py  test_tool_commands.py  (+2 more)
cmd/defenseclaw/: main.go
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIG_FILES.md  CONTRIBUTING.md  E2E.md  EC2_CONTAINER_DEPLOY.md  GUARDRAIL.md  GUARDRAIL_QUICKSTART.md  GUARDRAIL_RULE_PACKS.md  INSTALL.md  OBSERVABILITY-CONTRACT.md  OBSERVABILITY.md  OPENSHELL_SANDBOX_EVENTS.md  OTEL-IMPLEMENTATION-STATUS.md  OTEL.md  PLUGINS.md  QUICKSTART.md  README.md  SANDBOX.md  SANDBOX_ARCHITECTURE.md  SANDBOX_DEBUGGING.md  SANDBOX_MONITORING.md  SANDBOX_QUICKSTART.md  SANDBOX_SETUP.md  SPLUNK_APP.md  TESTING.md  TUI.md
docs/archive/: LOCAL_OBSERVABILITY_STACK_MOVED.md  WEBHOOK_NOTIFICATIONS_PR_DESCRIPTION.md
docs/design/: cli-ux-quickstart.md  openshell-standalone-sandbox.md  sandbox-productization.md  sandbox-scanning.md  sandbox-security-analysis.md  standalone-sandbox-issues.md
docs/development/: DEVELOPER_SPEC.md
docs/reference/: GATEWAY_SPEC.md
docs/requirements/: FREE_FROM_DAY1.md
extensions/defenseclaw/: openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
internal/audit/: actions.go  actions_test.go  context.go  context_test.go  export.go  judge_responses_test.go  logger.go  logger_activity.go  logger_sink.go  logger_structured_test.go  logger_test.go  logger_v7_test.go  network_egress.go  network_egress_test.go  scan_emit_integration_test.go  scan_persist.go  severity.go  store.go  store_test.go  store_v7_test.go  track5_test.go
internal/cli/: audit_export.go  audit_sinks.go  audit_sinks_test.go  daemon.go  hint.go  policy.go  policy_diff.go  policy_diff_test.go  provenance_cmd.go  provenance_test.go  root.go  sandbox.go  scan.go  scan_test.go  scan_v7.go  sidecar.go  tui_cmd.go  watchdog.go  watchdog_metrics_test.go  watchdog_test.go
internal/config/: actions.go  claw.go  config.go  config_test.go  defaults.go  sinks.go
internal/configs/: custom_providers_test.go  embed.go  providers.json
internal/daemon/: daemon.go  daemon_test.go  proc_unix.go
internal/enforce/: mcp_enforcer.go  plugin_enforcer.go  policy.go  policy_test.go  (+3 more)
plugins/: plugin.go  registry.go  registry_test.go
policies/: default.yaml  firewall-deny-default.yaml  permissive.yaml  strict.yaml
schemas/: network-egress-event.json  scan-finding-event.json
scripts/: add-to-path.sh  assert-gateway-jsonl.py  audit_parity.py  bundle-sandbox-test.sh  check_audit_actions.py  check_error_codes.py  check_schemas.py  fix-sandbox-acls.sh  install-dev.sh  install-openshell-sandbox.sh  install.sh  runner-cleanup.sh  setup-llm.sh  setup-scanners.sh  test-e2e-cli.py  test-e2e-full-stack.sh  test-e2e-mac.sh  test-e2e-sandbox-policy-diff.sh  test-e2e-sandbox-protection.sh  test-e2e-sandbox.sh  test-e2e-spark.sh  test-e2e-tool-block-sandbox.sh  test-e2e-tool-block.sh  test-proxy-sandbox.py  upgrade.sh
test/: poc_health_credential_leak.py
(+544 files in other folders)
